links das paginas

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <path d="M13.73 21a2 2 0 0 1-3.46 0" /></svg>
             </button>
             <button class="profile-btn">
-              <img src="./img/usuario.png" />
+              <img src="./dashboard/img/usuario.png" />
               <span>Gabriel Prates</span>
             </button>
           </div>
@@ -147,7 +147,7 @@
                   <img src="./dashboard/img/html.png" alt="participant">
                   <img src="./dashboard/img/css-3.png" alt="participant">
                 </div>
-                <a class="link-button-code" href="https://github.com/devPrates/Desenvolvimento-FrontEnd" target="_blank"><div class="days-left" style="color: #ff942e;">
+                <a class="link-button-code" href="https://github.com/devPrates/Frontend/tree/main/box-model" target="_blank"><div class="days-left" style="color: #ff942e;">
                     CÓDIGO
                   </div></a>
                 <a class="link-button-code" href="./box-model/index.html" target="_blank"> <div class="days-left" style="color: #ff942e;">
@@ -182,13 +182,13 @@
               </div>
               <div class="project-box-footer">
                 <div class="participants">
-                  <img src="./img/html.png" alt="participant">
-                  <img src="./img/css-3.png" alt="participant">
+                  <img src="./dashboard/img/html.png" alt="participant">
+                  <img src="./dashboard/img/css-3.png" alt="participant">
                 </div>
-                <a class="link-button-code" href="https://github.com/devPrates/Desenvolvimento-FrontEnd" target="_blank"><div class="days-left" style="color: #4f3ff0;">
+                <a class="link-button-code" href="https://github.com/devPrates/Frontend/tree/main/flexbox" target="_blank"><div class="days-left" style="color: #4f3ff0;">
                   CÓDIGO
                 </div></a>
-                <a class="link-button-code" href=""><div class="days-left" style="color: #4f3ff0;">
+                <a class="link-button-code" href="./flexbox/index.html" target="_blank"><div class="days-left" style="color: #4f3ff0;">
                     DEMO
                   </div></a>
               </div>
@@ -220,13 +220,13 @@
               </div>
               <div class="project-box-footer">
                 <div class="participants">
-                  <img src="./img/html.png" alt="participant">
-                  <img src="./img/css-3.png" alt="participant">
+                  <img src="./dashboard/img/html.png" alt="participant">
+                  <img src="./dashboard/img/css-3.png" alt="participant">
                 </div>
-                <a class="link-button-code" href="https://github.com/devPrates/Desenvolvimento-FrontEnd" target="_blank"><div class="days-left" style="color: #096c86;">
+                <a class="link-button-code" href="https://github.com/devPrates/Frontend/tree/main/backgrounds" target="_blank"><div class="days-left" style="color: #096c86;">
                   CÓDIGO
                 </div></a>
-                <a class="link-button-code" href=""><div class="days-left" style="color: #096c86;">
+                <a class="link-button-code" href="./backgrounds/index.html" target="_blank"><div class="days-left" style="color: #096c86;">
                     DEMO
                   </div></a>
               </div>
@@ -252,19 +252,19 @@
               <div class="box-progress-wrapper">
                 <p class="box-progress-header">Progresso</p>
                 <div class="box-progress-bar">
-                  <span class="box-progress" style="width: 80%; background-color: #34c471"></span>
+                  <span class="box-progress" style="width: 90%; background-color: #34c471"></span>
                 </div>
-                <p class="box-progress-percentage">80%</p>
+                <p class="box-progress-percentage">90%</p>
               </div>
               <div class="project-box-footer">
                 <div class="participants">
-                  <img src="./img/html.png" alt="participant">
-                  <img src="./img/css-3.png" alt="participant">
+                  <img src="./dashboard/img/html.png" alt="participant">
+                  <img src="./dashboard/img/css-3.png" alt="participant">
                 </div>
-                <a class="link-button-code" href="https://github.com/devPrates/Desenvolvimento-FrontEnd" target="_blank"><div class="days-left" style="color: #df3670;">
+                <a class="link-button-code" href="https://github.com/devPrates/Frontend/tree/main/site-magic" target="_blank"><div class="days-left" style="color: #df3670;">
                   CÓDIGO
                 </div></a>
-                <a class="link-button-code" href=""><div class="days-left" style="color: #df3670;">
+                <a class="link-button-code" href="./site-magic/index.html" target="_blank"><div class="days-left" style="color: #df3670;">
                     DEMO
                   </div></a>
               </div>
@@ -296,10 +296,10 @@
               </div>
               <div class="project-box-footer">
                 <div class="participants">
-                  <img src="./img/html.png" alt="participant">
-                  <img src="./img/css-3.png" alt="participant">
+                  <img src="./dashboard/img/html.png" alt="participant">
+                  <img src="./dashboard/img/css-3.png" alt="participant">
                 </div>
-                <a class="link-button-code" href="https://github.com/devPrates/Desenvolvimento-FrontEnd" target="_blank"><div class="days-left" style="color: #34c471;">
+                <a class="link-button-code" href="https://github.com/devPrates/Frontend/tree/main/dashboard" target="_blank"><div class="days-left" style="color: #34c471;">
                   CÓDIGO
                 </div></a>
 
@@ -335,13 +335,13 @@
               </div>
               <div class="project-box-footer">
                 <div class="participants">
-                  <img src="./img/html.png" alt="participant">
-                  <img src="./img/css-3.png" alt="participant">
+                  <img src="./dashboard/img/html.png" alt="participant">
+                  <img src="./dashboard/img/css-3.png" alt="participant">
                 </div>
-                <a class="link-button-code" href="https://github.com/devPrates/Desenvolvimento-FrontEnd" target="_blank"><div class="days-left" style="color: #4067f9;">
+                <a class="link-button-code" href="https://github.com/devPrates/Frontend/tree/main/formulario" target="_blank"><div class="days-left" style="color: #4067f9;">
                   CÓDIGO
                 </div></a>
-                <a class="link-button-code" href="" ><div class="days-left" style="color: #4067f9;">
+                <a class="link-button-code" href="./formulario/index.html" target="_blank"><div class="days-left" style="color: #4067f9;">
                     DEMO
                   </div></a>
               </div>
