--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./dashboard/css/style.css">
-    <title>Dashboard</title>
+    <link rel="icon" type="imagem/png" href="/dashboard/img/dashboard.png" />
+    <title>Painel de Controle</title>
 </head>
 <body>
 
@@ -360,8 +361,21 @@
           <p>Atividades</p>
         </div>
         <div class="messages">
-          
-        </div>
+          <form class="form">
+              <div class="input-content">
+                <input class="form__input"
+                    type="text" 
+                    id="todo" 
+                    name="to-do"
+                    size="30"
+                    required>
+                <button class="button"><span>Adicionar</span></button>
+              </div>
+          </form>
+          <div>
+            <ul class="toDoList">
+            </ul>
+          </div>
       </div>
       </div>
       </div>
