landing page horror

--- a/index.html
+++ b/index.html
@@ -348,6 +348,45 @@
               </div>
             </div>
           </div>
+
+          <div class="project-box-wrapper">
+            <div class="project-box" style="background-color: #fee4cb;">
+              <div class="project-box-header">
+                <span>10 de Abril de 2023</span>
+                <div class="more-wrapper">
+                  <button class="project-btn-more">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
+                      <circle cx="12" cy="12" r="1" />
+                      <circle cx="12" cy="5" r="1" />
+                      <circle cx="12" cy="19" r="1" /></svg>
+                  </button>
+            </div>
+          </div>
+          <div class="project-box-content-header">
+            <p class="box-content-header">Horror Game</p>
+            <p class="box-content-subheader">Landing page jogo de terror</p>
+          </div>
+          <div class="box-progress-wrapper">
+            <p class="box-progress-header">Progresso</p>
+            <div class="box-progress-bar">
+              <span class="box-progress" style="width: 90%; background-color: #34c471"></span>
+            </div>
+            <p class="box-progress-percentage">90%</p>
+          </div>
+          <div class="project-box-footer">
+            <div class="participants">
+              <img src="./dashboard/img/html.png" alt="participant">
+              <img src="./dashboard/img/css-3.png" alt="participant">
+            </div>
+            <a class="link-button-code" href="https://github.com/devPrates/Frontend/tree/main/site-horror" target="_blank"><div class="days-left" style="color: #ff942e;">
+                CÓDIGO
+              </div></a>
+            <a class="link-button-code" href="./site-horror/index.html" target="_blank"> <div class="days-left" style="color: #ff942e;">
+              DEMO
+            </div></a>
+          </div>
+        </div>
+      </div>
         </div>
       </div>
       <div class="messages-section">
