exemplos de formulario

--- a/form-login/index.html
+++ b/form-login/index.html
@@ -8,6 +8,47 @@
     <title>Formulario de Login</title>
 </head>
 <body>
-    
+    <main>
+        <form action="./servidor.html" method="get"><!--Fazer formulario-->
+
+            <div class="input-group">
+                <label for="">Nome:</label>
+                <input type="text" />
+            </div>
+
+            <div class="input-group">
+                <label for="">Data de Nascimento: </label>
+                <input type="date" />
+            </div>
+
+            <div class="input-group">
+                <label for="">E-mail:</label>
+                <input type="email" />
+            </div>
+
+            <div class="input-group">
+                <label for="">Senha:</label>
+                <input type="password" />
+            </div>
+
+            <div class="input-group">
+                <label for="">Confirmar senha:</label>
+                <input type="password" />
+            </div>
+
+            <div class="input-group">
+                <label for="">Genero:</label>
+                <div class="genero">
+                    Masculino<input type="radio" name="genero" />
+                    Feminino<input type="radio"name="genero" />
+                    Prefiro não responder<input type="radio"name="genero" />
+                </div>
+            </div>
+            
+            <div class="input-group">
+                <button>Enviar</button>
+            </div>
+        </form>
+    </main>
 </body>
 </html>
