--- a/form-login/index.html
+++ b/form-login/index.html
@@ -6,42 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/exemplo.css">
     <title>Formulario de Login</title>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
     <main>
-        <form action="./servidor.html" method="get"><!--Fazer formulario-->
+        <form action="./recebe-dados.html" method="get"><!--Fazer formulario-->
 
             <div class="input-group">
-                <label for="">Nome:</label>
-                <input type="text" />
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" placeholder="Jefin Santos Silva" />
             </div>
 
             <div class="input-group">
-                <label for="">Data de Nascimento: </label>
-                <input type="date" />
+                <label for="data">Data de Nascimento: </label>
+                <input type="date" id="data"/>
             </div>
 
             <div class="input-group">
-                <label for="">E-mail:</label>
-                <input type="email" />
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" placeholder="exemplo@gmail.com"/>
             </div>
 
             <div class="input-group">
-                <label for="">Senha:</label>
-                <input type="password" />
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" />
             </div>
 
             <div class="input-group">
-                <label for="">Confirmar senha:</label>
-                <input type="password" />
+                <label for="confirm-senha">Confirmar senha:</label>
+                <input type="password" id="confirm-senha"/>
             </div>
 
             <div class="input-group">
-                <label for="">Genero:</label>
+                <label>Genero:</label>
                 <div class="genero">
-                    Masculino<input type="radio" name="genero" />
-                    Feminino<input type="radio"name="genero" />
-                    Prefiro não responder<input type="radio"name="genero" />
+                    <label> 
+                        <input type="radio" name="genero" />
+                        Masculino
+                    </label>
+                    <label> 
+                        <input type="radio" name="genero" />
+                        Feminino
+                    </label>
+                    <label> 
+                        <input type="radio" name="genero" />
+                        Prefiro não Responder
+                    </label>
+                </div>
+            </div>
+
+            <div class="input-group">
+                <div class="dados-endereco">
+                    <div>
+                        <label for="cep">CEP:</label>
+                        <input type="text" id="cep">
+                    </div>
+                    <div>
+                        <button type="button" class="btn-localizar"><i class="ph ph-magnifying-glass"></i></button>
+                    </div>
+                    <div>
+                        <label for="logradouro">logradouro:</label>
+                        <input type="text" id="logradouro">
+                    </div>
+                    <div>
+                        <label for="cidade">Cidade:</label>
+                        <select name="" id="cidade">
+                            <option value="">Selecione a Opção</option>
+                            <option value="">Navirai</option>
+                            <option value="">Navirai</option>
+                            <option value="">Navirai</option>
+                            <option value="">Navirai</option>
+                        </select>
+                    </div>
                 </div>
             </div>
             
