--- a/formularios-atividades/index.html
+++ b/formularios-atividades/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <main class="conteiner">
+        <form action="" method="get" class="form-post">
+            <div class="form-header">
+                <h1>Criar Publicação</h1>
+            </div>
+            <div class="form-user">
+                <img src="https://randomuser.me/api/portraits/women/11.jpg" alt="" class="user-photo">
+                <h2>Michelle Thompson</h2>
+            </div>
+            <textarea placeholder="No que você está pensando"></textarea>
+        </form>
+    </main>
 </body>
 </html>
