--- a/formularios-atividades/index.html
+++ b/formularios-atividades/index.html
@@ -12,13 +12,27 @@
     <main class="conteiner">
         <form action="" method="get" class="form-post">
             <div class="form-header">
-                <h1>Criar Publicação</h1>
+                <h1 class="form-titulo">Criar Publicação</h1>
+                <div class="risco"></div>
             </div>
+            
             <div class="form-user">
-                <img src="https://randomuser.me/api/portraits/women/11.jpg" alt="" class="user-photo">
-                <h2>Michelle Thompson</h2>
+                <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="" class="user-photo">
+                <h2 class="user-name">Michelle Thompson</h2>
             </div>
-            <textarea placeholder="No que você está pensando"></textarea>
+            <textarea placeholder="No que você está pensando" class="form-text"></textarea>
+            <div class="publish-resources">
+                <h2 class="publish-titulo">Adicionar a Publicação</h2>
+                <div class="publish-icons">
+                    <a href="#" class="link-icon"><i class="ph ph-images-square"></i></a>
+                    <a href="#" class="link-icon"><i class="ph ph-user-gear"></i></a>
+                    <a href="#" class="link-icon"><i class="ph ph-smiley"></i></a>
+                    <a href="#" class="link-icon"><i class="ph ph-map-pin"></i></a>
+                    <a href="#" class="link-icon"><i class="ph ph-gif"></i></a>
+                    <a href="#" class="link-icon"><i class="ph ph-dots-three"></i></a>
+                </div>
+            </div>
+            <button class="btn-post">Publicar</button>
         </form>
     </main>
 </body>
